shaku/tests/ui/provider_missing_provider_dependency.stderr
error[E0277]: the trait bound `TestModule: shaku::module::HasProvider<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/provider_missing_provider_dependency.rs:21:1
   |
21 | / module! {
22 | |     TestModule {
23 | |         components = [],
24 | |         providers = [ProviderImpl]
25 | |     }
26 | | }
   | |_^ the trait `shaku::module::HasProvider<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
   = help: the following implementations were found:
             <TestModule as shaku::module::HasProvider<<ProviderImpl as shaku::provider::Provider<TestModule>>::Interface>>
   = note: required because of the requirements on the impl of `shaku::provider::Provider<TestModule>` for `ProviderImpl`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0277]: the trait bound `TestModule: shaku::module::HasProvider<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/provider_missing_provider_dependency.rs:21:1
   |
21 | / module! {
22 | |     TestModule {
23 | |         components = [],
24 | |         providers = [ProviderImpl]
25 | |     }
26 | | }
   | |_^ the trait `shaku::module::HasProvider<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
   = help: the following implementations were found:
             <TestModule as shaku::module::HasProvider<<ProviderImpl as shaku::provider::Provider<TestModule>>::Interface>>
   = note: required because of the requirements on the impl of `shaku::provider::Provider<TestModule>` for `ProviderImpl`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
